# pi_coach

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  render.yaml  roadmap.txt
.github/workflows/: keepalive.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  data_loader.py  delivery.py  llm.py  main.py  notify.py  prompts.py  ratelimit.py  rubric.py  schemas.py  selection.py  transcription.py
backend/app/data/: events.json  pis.json  rubric.json
backend/scripts/: pi_lookup.py
backend/tests/: test_content_loop.py  test_data_loader.py  test_delivery.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  analytics.ts  api.ts  demoData.ts  index.css  main.tsx
marketing/: README.md
