[project]
name = "deca-roleplay-trainer-backend"
version = "0.1.0"
description = "FastAPI backend for the DECA Roleplay Trainer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "truststore>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
